-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u411, jfx11.0.23, jfx17.0.11, jfx21.0.3, jfx22.0.1, jfx23
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8339925 | jfx21.0.5 | Sergey Chernyshev | P2 | Resolved | Fixed | b01 |
| JDK-8345201 | jfx17.0.14 | Sergey Chernyshev | P2 | Resolved | Fixed | master |
| JDK-8339921 | jfx17.0.13 | Sergey Chernyshev | P2 | Resolved | Fixed | b01 |
| JDK-8334743 | 8u431 | Jay Bhaskar | P2 | Closed | Fixed | b01 |
| JDK-8335410 | 8u421 | Ambarish Rapte | P2 | Resolved | Fixed | b32 |
- backported by
-
JDK-8335410 Websocket callbacks are not executed after WebKit 617.1 update
-
- Resolved
-
-
JDK-8339921 Websocket callbacks are not executed after WebKit 617.1 update
-
- Resolved
-
-
JDK-8339925 Websocket callbacks are not executed after WebKit 617.1 update
-
- Resolved
-
-
JDK-8345201 Websocket callbacks are not executed after WebKit 617.1 update
-
- Resolved
-
-
JDK-8334743 Websocket callbacks are not executed after WebKit 617.1 update
-
- Closed
-
- duplicates
-
JDK-8346250 Native methods missing in libjfxwebkit.so to create websockets
-
- Closed
-
- relates to
-
JDK-8318614 Update WebKit to 617.1
-
- Resolved
-
- links to
-
Commit
openjdk/jfx/6a586b66
-
Commit(master)
openjdk/jfx17u/64fafbf9
-
Commit(master)
openjdk/jfx21u/b39d2764
-
Review(master)
openjdk/jfx17u/200
-
Review(master)
openjdk/jfx21u/70
-
Review(master)
openjdk/jfx/1477