8331765: Websocket callbacks are not executed after WebKit 617.1 update